--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,4 @@ requests>=2.31.0
 pillow>=10.0.0
 numpy>=1.24.0
 pandas>=2.0.0
-
-# Development dependencies
-pytest>=7.0.0
-black>=23.0.0
-flake8>=6.0.0
+thefuzz>=0.19.0
