--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "numpy==2.2.6",
     "smolagents[all]>=1.17.0",
 ]
